# gokart-timer

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml  Makefile
backend/src/: main.rs
backend/src/endpoints/: mod.rs  ping.rs  times.rs
backend/src/tests/: mod.rs
frontend/: App.axaml  App.axaml.cs  Makefile  Program.cs  ViewLocator.cs  app.manifest  appsettings.json  frontend.csproj  frontend.sln  gokart-timer-frontend.csproj
frontend/Config/: ApiSettings.cs
frontend/Converters/: BoolToColorConverter.cs
frontend/Models/: PingService.cs  RaceClient.cs
frontend/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
frontend/Views/: MainWindow.axaml  MainWindow.axaml.cs
